# BobTheChessEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Engine/: CMakeLists.txt
Engine/include/: Board.h  Engine.h  Logger.h  Move.h  MoveStruct.h  Piece.h  Utils.h
Engine/src/: Board.cpp  Engine.cpp  Logger.cpp  Move.cpp  Piece.cpp  main.cpp
cmake/scripts/: utilities.cmake
cmake/toolchains/: Toolchain-common-flags.cmake  Toolchain-gcc-m32.cmake  Toolchain-gcc-m64.cmake  Toolchain-gcc.cmake  Toolchain-mingw64-m32.cmake  Toolchain-mingw64-m64.cmake  Toolchain-mingw64.cmake
dependencies/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
dependencies/spdlog/: CMakeLists.txt
doc/: UCI_protocol.md
test/: CMakeLists.txt
test/src/: main.cpp
test/src/Engine/: TestBoard.cpp  TestMoves.cpp  TestPiece.cpp
